align issue

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 35% 50%;
     gap: 15%;
+
 }
 
 .about__me{
@@ -67,12 +68,19 @@
     color: var(--color-light);
 }
 
+.about__container{
+   
+}
 
+.about__me{
+    
+}
 
 @media screen and (max-width: 1024px) {
     .about__container{
         grid-template-columns: 1fr;
         gap: 0;
+        
     }
     .about__me{
         width: 50%;
@@ -86,8 +94,8 @@
 @media screen and (max-width: 600px) {
    
     .about__me{
-        width: 65%;
-        margin: 0 auto 3rem;
+        width: 60%;
+        margin: 0 0 3rem 1rem;
 
     }
     .about__cards{
@@ -99,9 +107,8 @@
         text-align: center;
     }
 
-    .about_content p{
-        margin: 1.5rem 0;
-    }
+    
+    
 
     
 }
